Modified UI and added stripe payment

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_RAZORPAY_KEY_ID=rzp_test_RxKod0wpkCNep8
 VITE_BACKEND_URL=https://food-delivery-app-backend-hkvt.onrender.com
+# VITE_BACKEND_URL=http://localhost:4000
